welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (n<= 19 && 13 <= n)
        ^hasTeen:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		return true
                ^hasTeen:10: error: ')' expected but 'return' found.
		return true
                ^